fix: remove commented code

--- a/dmrf.ipynb
+++ b/dmrf.ipynb
@@ -50,8 +50,7 @@
    "source": [
     "objects_data = {'data': {'list':[], 'total': 10000}, 'errcode': '0'}\n",
     "offset_ = 0\n",
-    "limit_ = 2000\n",
-    "total = 10000"
+    "limit_ = 2000"
    ],
    "metadata": {
     "collapsed": false,
@@ -65,14 +64,12 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "# while offset_ < objects_data['data']['total']:\n",
-    "if True:\n",
+    "while offset_ < objects_data['data']['total']:\n",
     "    url = f'https://xn--80az8a.xn--d1aqf.xn--p1ai/%D1%81%D0%B5%D1%80%D0%B2%D0%B8%D1%81%D1%8B/api/kn/object?offset={offset_}&limit={limit_}&sortField=devId.devShortCleanNm&sortType=asc&objStatus=0'\n",
     "    res = requests.get(url)\n",
     "    json = res.json()\n",
     "    if int(json['errcode']) != 0:\n",
-    "        # break\n",
-    "        raise\n",
+    "        break\n",
     "    objects_data['data']['list'] += json['data']['list']\n",
     "    objects_data['data']['total'] = json['data']['total']\n",
     "    offset_ += limit_"
